--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Rayona Hub Website</title>
+</head>
+<body>
+	<h1>Welcome to Rayona Hub!</h1>
+</body>
+</html>
