--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <title>Rayona Hub</title>
+  <style>
+.glowing-text {
+  text-align: center;
+  justify-content: center;
+  font-size: 4em;
+  color: #fff; /* Base text color */
+  text-shadow: 
+    0 0 10px #fff,    /* White glow - adjust spread radius */
+    0 0 20px #fff,   /* Cyan glow - adjust spread radius and color */ 
+    0 0 30px #fff;   /* Blue glow - adjust spread radius and color */ 
+}
+</style>
+  
+  <!-- HTML -->
+  
+
+  <!-- Custom Styles -->
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <h2 class="glowing-text">Welcome, to Rayona Hub</h2>
+  <header class="header">
+    <a href="#" class="logo">Rayona Hub</a>
+    <nav class="navbar">
+      <a href="#">Home</a>
+      <a href="#">Android</a>
+      <a href="#">iOS</a>
+      <a href="#">About</a>
+    </nav>
+  </header>
+    
+  
+  <!-- Project -->
+  <script src="main.js"></script>
+</body>
+</html>
