--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="shortcut icon" type="x-icon" href="RayonaHubLogo.png"
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -28,13 +29,15 @@
 
 <body>
     <h2 class="glowing-text">Welcome, to Rayona Hub</h2>
+    <button class="download">Download</button>
   <header class="header">
     <a href="#" class="logo">Rayona Hub</a>
     <nav class="navbar">
-      <a href="#">Home</a>
+      <a href="https://google.com">Home</a>
       <a href="#">Android</a>
       <a href="#">iOS</a>
-      <a href="#">About</a>
+      <a href="#">Windows</a>
+      <a href="https://discord.gg/2E6XErkRQn">Discord</a>
     </nav>
   </header>
     
