--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   color: #fff; /* Base text color */
   text-shadow: 
     0 0 10px #fff,    /* White glow - adjust spread radius */
-    0 0 20px #fff,   /* Cyan glow - adjust spread radius and color */ 
+    0 0 20px #000,   /* Cyan glow - adjust spread radius and color */ 
     0 0 30px #fff;   /* Blue glow - adjust spread radius and color */ 
 }
 </style>
